fix: overflow

--- a/index.css
+++ b/index.css
@@ -360,6 +360,7 @@ html[lang='nl'] .dark .hero {
 }
 
 .section {
+  max-width: 100%;
   padding: var(--padding);
   display: table;
   margin: auto;
